--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
       <version>4.8.2</version>  
       <scope>test</scope>  
     </dependency> 
-    <finalName>devintegration<finalName>
+    <finalName>devintegration</finalName>
   </dependencies>  
   
 </project>  
